[package]
name = "turing-monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
psutil = "3.3"
log = "0.4"
simple_logger = "4.3"
clap = { version = "4.5", features = ["derive"] }
bevy_reflect = "0.13"
xxhash-rust = { version = "0.8.5", features = ["xxh3", "const_xxh3"] }
lodepng = "3.10.1"

[dependencies.turing-screen]
path = "../turing-rust"

[profile.release]
codegen-units = 1
lto = "fat"
strip = true
panic = "abort"
